changed dvh to svh due to snapping issues on mobilephone

--- a/src/app/mainpage/about-me/about-me.scss
+++ b/src/app/mainpage/about-me/about-me.scss
@@ -5,7 +5,7 @@
 
 .about_wrapper {
     max-width: 1440px;
-    min-height: 100dvh;
+    min-height: 100svh;
     margin: 0 auto;
     display: flex;
     justify-content: center;
