--- a/src/app/mainpage/contact/contact.scss
+++ b/src/app/mainpage/contact/contact.scss
@@ -1,7 +1,7 @@
 @use 'variables' as *;
 
 .contact_wrapper {
-    min-height: 100dvh; 
+    min-height: 100svh; 
     max-width: 1440px;
     margin: 0 auto;
     display: flex;
