--- a/src/app/mainpage/featured-projects/featured-projects.scss
+++ b/src/app/mainpage/featured-projects/featured-projects.scss
@@ -3,7 +3,7 @@
 .featured_wrapper {
 
     transition: all 0.5s ease;
-    min-height: 100dvh;
+    min-height: 100svh;
     max-width: 1440px;
     margin: 0 auto;
     display: flex;
