--- a/src/app/mainpage/featured-projects/project-01/project-01.scss
+++ b/src/app/mainpage/featured-projects/project-01/project-01.scss
@@ -4,7 +4,7 @@
     position: fixed;
     inset: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100svh;
     z-index: 666;
     display: flex;
     align-items: center;
@@ -174,7 +174,7 @@
         position: fixed;
         // inset: 0;
         width: 100dvw;
-        height: 100dvh;
+        height: 100svh;
         z-index: 666;
         display: flex;
         align-items: center;
