--- a/src/app/mainpage/skills/skills.scss
+++ b/src/app/mainpage/skills/skills.scss
@@ -2,7 +2,7 @@
 @use 'mixins' as *;
 
 .skills_wrapper {
-    min-height: 100dvh; 
+    min-height: 100svh; 
     max-width: 1440px;
     margin: 0 auto;
     display: flex;
