--- a/src/app/mainpage/testimonials/testimonials.scss
+++ b/src/app/mainpage/testimonials/testimonials.scss
@@ -3,7 +3,7 @@
 
 .testi_wrapper {
 
-    min-height: 100dvh;
+    min-height: 100svh;
     max-width: 1440px;
     margin: 0 auto;
     display: flex;
