--- a/src/app/shared-pages/navbar/navbar.scss
+++ b/src/app/shared-pages/navbar/navbar.scss
@@ -187,7 +187,7 @@ nav {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 100svh;
     background-color: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(8px);
     z-index: 50;
